--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   uuid: ^2.2.2
+  sqflite: ^1.3.2+1
+  path_provider: ^1.6.24
 
 dev_dependencies:
   flutter_test:
